fix: refactor code in programs block

--- a/source/index.html
+++ b/source/index.html
@@ -262,12 +262,8 @@
               <div class="programs__slide-text-wrapper">
                 <h3 class="programs__slide-title">Стажировки</h3>
                 <div class="programs__slide-description-wrapper">
-                  <p>Получите незаменимый опыт
-                    работы в крупнейших мировых
-                    компаниях.</p>
-                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее
-                      о
-                      стажировках</span></a>
+                  <p>Получите незаменимый опыт работы в крупнейших мировых компаниях.</p>
+                  <a class="programs__slide-details button-arrow" href="#"><span class="visually-hidden">Подробнее о cтажировках</span></a>
                 </div>
               </div>
             </div>
