feat: add button states

--- a/source/index.html
+++ b/source/index.html
@@ -129,7 +129,7 @@
                 <p>Погрузитесь в академическую программу, проходя практику в разных городах, ощущая настоящий
                   студенческий стиль жизни!</p>
                 <div class="hero__button-wrapper">
-                  <button class="hero__details button button--primary" href="#">Подробнее</button>
+                  <a class="hero__details button button--primary" href="#">Подробнее</a>
                 </div>
               </div>
             </div>
