--- a/source/index.html
+++ b/source/index.html
@@ -1025,11 +1025,11 @@
           </li>
           <li class="contacts__item">
             <h3 class="contacts__item-title">Телефон</h3>
-            <a class="contacts__item-description" href="tel:+796387687676">+7 963 876 876 76</a>
+            <a class="contacts__item-description contacts__item-description--phone" href="tel:+796387687676">+7 963 876 876 76</a>
           </li>
           <li class="contacts__item">
             <h3 class="contacts__item-title">Email</h3>
-            <a class="contacts__item-description" href="mailto:info@stazh.ru">Info@stazh.ru</a>
+            <a class="contacts__item-description contacts__item-description--email" href="mailto:info@stazh.ru">Info@stazh.ru</a>
           </li>
         </ul>
 
