fix: divide main.js into modules, connect all modules in main.js

--- a/source/index.html
+++ b/source/index.html
@@ -1248,10 +1248,10 @@
           <label class="modal__label" for="phone-modal">Телефон</label>
         </div>
 
-        <div class="modal__input-wrapper modal__custom-select-wrapper custom-select">
+        <div class="modal__input-wrapper modal__custom-select-wrapper custom-select custom-select--secondary">
           <input class="modal__input modal__input--city custom-select__input" type="text" id="city-modal"
             name="city-modal" readonly required>
-          <label class="modal__label" for="city-modal">Выберите город</label>
+          <label class="modal__label custom-select__label" for="city-modal">Выберите город</label>
           <div class="modal__custom-select custom-select__select">
             <div class="modal__custom-option custom-select__option"></div>
             <div class="modal__custom-option custom-select__option">Москва</div>
