--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internship</title>
   <meta name="description" content="Сайт компании Internship. Обучение за рубежом">
-  <!-- <link rel="icon" href="favicon.ico"> -->
-  <!-- <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png"> -->
-  <!-- <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png"> -->
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
   <link rel="preload" href="fonts/Manrope-Bold.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Manrope-ExtraBold.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Manrope-ExtraLight.woff2" type="font/woff2" as="font">
@@ -16,7 +16,7 @@
   <link rel="preload" href="fonts/Manrope-Medium.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Manrope-Regular.woff2" type="font/woff2" as="font">
   <link rel="preload" href="fonts/Manrope-SemiBold.woff2" type="font/woff2" as="font">
-  <!-- <link rel="manifest" href="manifest.json"> -->
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="sass/style.scss">
 </head>
 
