--- a/source/index.html
+++ b/source/index.html
@@ -1131,18 +1131,18 @@
           <p class="form__description">Оставьте ваши контакты, если у вас остались вопросы — мы на них ответим!</p>
 
           <div class="form__input-wrapper">
-            <label class="form__label" for="name">Имя</label>
             <input class="form__input" type="text" id="name" name="name" required>
+            <label class="form__label" for="name">Имя</label>
           </div>
 
           <div class="form__input-wrapper">
-            <label class="form__label" for="phone">Телефон</label>
             <input class="form__input" type="tel" id="phone" name="phone" minlength="11" maxlength="25" required>
+            <label class="form__label" for="phone">Телефон</label>
           </div>
 
           <div class="form__input-wrapper">
-            <label class="form__label" for="message">Ваше сообщение</label>
             <textarea class="form__input form__input--message" id="message" name="message" required></textarea>
+            <label class="form__label" for="message">Ваше сообщение</label>
           </div>
 
           <div class="form__input-wrapper form__custom-select-wrapper custom-select">
@@ -1160,9 +1160,11 @@
           </div>
 
           <div class="form__checkbox-wrapper custom-checkbox">
-          <input class="form__input-checkbox custom-checkbox__input" type="checkbox" id="personal-data" name="personalData">
-          <label class="form__label form__label--checkbox custom-checkbox__label" for="personal-data">Я согласен на обработку моих
-            персональных<br> данных</label>
+            <input class="form__input-checkbox custom-checkbox__input" type="checkbox" id="personal-data"
+              name="personalData">
+            <label class="form__label form__label--checkbox custom-checkbox__label" for="personal-data">Я согласен
+              на обработку моих
+              персональных<br> данных</label>
           </div>
 
           <button class="form__send button button--secondary-light" type="submit">Отправить</button>
