fix: add close menu clicking on sublist item, refactor code

--- a/source/index.html
+++ b/source/index.html
@@ -51,16 +51,16 @@
               <li class="header__nav-item header__nav-item--sublist">
                 <a class="header__nav-link" href="#">Программы</a>
                 <ul class="header__nav-sublist">
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Стажировки</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Волонтёрство</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Учеба</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Религия</a>
                   </li>
                 </ul>
@@ -77,16 +77,16 @@
                   <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Общее</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Волонтёрство</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Стажировки</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Карьера</a>
                   </li>
-                  <li>
+                  <li class="header__nav-sublist-item">
                     <a class="header__nav-sublist-link" href="#">Путешествия</a>
                   </li>
                 </ul>
