--- a/source/index.html
+++ b/source/index.html
@@ -288,7 +288,7 @@
                 <h3 class="programs__slide-title">Волонтёрство</h3>
                 <div class="programs__slide-description-wrapper">
                   <p>Помогайте другим и развивайте свои лидерские качества.</p>
-                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее о
+                  <a class="programs__slide-details button-arrow" href="#"><span class="visually-hidden">Подробнее о
                       волонтерстве</span></a>
                 </div>
               </div>
@@ -316,7 +316,7 @@
                 <h3 class="programs__slide-title">Учёба</h3>
                 <div class="programs__slide-description-wrapper">
                   <p>Получите образование и измените своё будущее.</p>
-                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее об
+                  <a class="programs__slide-details button-arrow" href="#"><span class="visually-hidden">Подробнее об
                       учебе</span></a>
                 </div>
               </div>
@@ -344,7 +344,7 @@
                 <h3 class="programs__slide-title">Учёба</h3>
                 <div class="programs__slide-description-wrapper">
                   <p>Получите образование и измените своё будущее.</p>
-                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее об
+                  <a class="programs__slide-details button-arrow" href="#"><span class="visually-hidden">Подробнее об
                       учебе</span></a>
                 </div>
               </div>
