fix: make changes after testing the project on windows, add platform check JS + tests

--- a/source/index.html
+++ b/source/index.html
@@ -1067,6 +1067,38 @@
                   на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
               </div>
             </div>
+
+            <!-- <div class="reviews__slide swiper-slide">
+              <div class="reviews__slide-content-wrapper">
+                <div class="reviews__author-wrapper">
+                  <div class="reviews__avatar-wrapper">
+                    <picture>
+                      <source width="60" height="60" type="image/webp"
+                        srcset="img/reviews/review-2/david-ivanov-avatar-tablet@1x.webp 1x, img/reviews/review-2/david-ivanov-avatar-tablet@2x.webp 2x">
+
+                      <img class="reviews__avatar" src="img/reviews/review-2/david-ivanov-avatar-tablet@1x.png"
+                        width="60" height="60" srcset="img/reviews/review-2/david-ivanov-avatar-tablet@2x.png"
+                        alt="Аватар Лолы Алекс">
+                    </picture>
+                  </div>
+
+                  <h3 class="reviews__slide-title">Леонид Кашин</h3>
+                </div>
+
+                <dl class="reviews__details">
+                  <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
+                  <dd class="reviews__details-info">Volunteer Chance</dd>
+
+                  <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
+                  <dd class="reviews__details-info">Осень 2021</dd>
+                </dl>
+
+                <h4 class="reviews__slide-subtitle">Благодаря опыту стажировки я нашел новую работу!</h4>
+                <blockquote>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
+                  рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была
+                  на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
+              </div>
+            </div> -->
           </div>
         </div>
         <div class="reviews__scrollbar swiper-scrollbar"></div>
